# KiCodex

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  check_kicad.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
kicodex-cli/: Cargo.toml
kicodex-cli/src/: main.rs
kicodex-core/: Cargo.toml
kicodex-core/src/: lib.rs  middleware.rs  models.rs  registry.rs  server.rs  watcher.rs
kicodex-core/src/data/: csv_loader.rs  kicad_libs.rs  library.rs  mod.rs  project.rs  schema.rs
kicodex-core/src/discovery/: auto_register.rs  lock_watcher.rs  mod.rs  process_scanner.rs
kicodex-core/src/routes/: categories.rs  mod.rs  parts.rs  root.rs
kicodex-core/tests/: integration_test.rs
kicodex-core/tests/fixtures/sample-library/data/: resistors.csv
kicodex-core/tests/fixtures/sample-library/schemas/: _base.yaml  resistor.yaml
kicodex-tray/: Cargo.toml  tauri.conf.json
kicodex-tray/capabilities/: default.json
kicodex-tray/frontend/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
kicodex-tray/frontend/public/: part-table-editor-view.js
kicodex-tray/frontend/src/: App.svelte  main.js
kicodex-tray/frontend/src/components/: Breadcrumb.svelte  ConfirmModal.svelte  Modal.svelte  Toast.svelte
kicodex-tray/frontend/src/lib/: confirm.svelte.js  kicad-register.js  tauri.js  toast.svelte.js
kicodex-tray/frontend/src/views/: AddProject.svelte  ComponentForm.svelte  Dashboard.svelte  Library.svelte  PartTableEditor.svelte  Picker.svelte  Project.svelte  RowForm.svelte  SchemaEditor.svelte  TableEditor.svelte  TemplateEditor.svelte  Validate.svelte
kicodex-tray/frontend/views/: add-project.js  component-form.js  component-type-editor.js  dashboard.js  library.js  part-table-editor.js  picker.js  project.js  row-form.js  schema-editor.js  table-editor.js  template-editor.js  validate.js
kicodex-tray/src/: command_types.rs  commands.rs  lib.rs  main.rs  tray.rs
tests/fixtures/sample-library/: library.yaml
tests/fixtures/sample-library/data/: resistors.csv
tests/fixtures/sample-library/schemas/: _base.yaml
