[package]
name = "kicodex-cli"
description = "CLI for KiCodex: serve, validate, and manage KiCad HTTP libraries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kicodex"
path = "src/main.rs"

[dependencies]
kicodex-core = { path = "../kicodex-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
serde_yml = "0.0.12"
glob = "0.3"
pathdiff = "0.2"
