[package]
name = "kicodex-tray"
description = "System tray app for KiCodex: auto-discovers and serves KiCad projects"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kicodex-core = { path = "../kicodex-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
open = "5"
serde_yml = "0.0.12"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
pathdiff = "0.2"
indexmap = { version = "2", features = ["serde"] }
